--- a/templates/base.html
+++ b/templates/base.html
@@ -44,67 +44,63 @@
 
 <body id="{% block body_id %}body{% endblock %}">
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-<div class="container">
-<div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">{% trans "Toggle Navigation" %}</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-    </button>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">{% trans "Toggle Navigation" %}</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
 
-    {% block navbar_title %}
-    {% if settings.SITE_TITLE %}<a class="navbar-brand" href="/">{{ settings.SITE_TITLE }}</a>{% endif %}
-    {% if settings.SITE_TAGLINE %}<p class="navbar-text visible-lg">{{ settings.SITE_TAGLINE }}</p>{% endif %}
-    {% endblock%}
-    <ul class="inline nav navbar-nav">
-        <li><a href="/">Home</a></li>
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-               role="button" aria-haspopup="true">
-                About
-                <span class="caret"></span>
-                <ul class="dropdown-menu">
-                    <li><a href="/about-mediathread/">About Mediathread</a></li>
-                    <li><a href="#">Watch the Video</a></li>
-                    <li><a href="/cases/">Cases</a></li>
-                    <li><a href="/research/">Research</a></li>
-                </ul>
-            </a>
-        </li>
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-               role="button" aria-haspopup="true">
-                Get Started
-                <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-                <li><a href="#">Sign in @ Columbia</a></li>
-                <li><a href="#">Request Access</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-               role="button" aria-haspopup="true">
-                Get Involved
-                <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-                <li><a href="#">Collection Providers</a></li>
-                <li><a href="#">Developers</a></li>
-                <li><a href="#">Funders</a></li>
-                <li><a href="#">Instructors</a></li>
-            </ul>
-        </li>
-        <li><a href="/faq/">FAQ</a></li>
-    </ul>
-</div>
-<div class="navbar-collapse collapse">
+            {% block navbar_title %}
+            {% if settings.SITE_TITLE %}<a class="navbar-brand" href="/">{{ settings.SITE_TITLE }}</a>{% endif %}
+            {% if settings.SITE_TAGLINE %}<p class="navbar-text visible-lg">{{ settings.SITE_TAGLINE }}</p>{% endif %}
+            {% endblock%}
+        </div>
 
-</div>
-</div>
-</div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+                <li>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                       role="button" aria-haspopup="true" aria-expanded="false">
+                        About <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/about-mediathread/">About Mediathread</a></li>
+                        <li><a href="#">Watch the Video</a></li>
+                        <li><a href="/cases/">Cases</a></li>
+                        <li><a href="/research/">Research</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                       role="button" aria-haspopup="true" aria-expanded="false">
+                        Get Started
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Sign in @ Columbia</a></li>
+                        <li><a href="#">Request Access</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                       role="button" aria-haspopup="true" aria-expanded="false">
+                        Get Involved
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Collection Providers</a></li>
+                        <li><a href="#">Developers</a></li>
+                        <li><a href="#">Funders</a></li>
+                        <li><a href="#">Instructors</a></li>
+                    </ul>
+                </li>
+                <li><a href="/faq/">FAQ</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <div class="container">
 
