--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,9 @@
             </button>
 
             {% block navbar_title %}
-            <img style="max-height: 70px;" src="{% static 'img/menu-logo.png' %}">
+            <a href="/">
+                <img style="max-height: 70px;" src="{% static 'img/menu-logo.png' %}">
+            </a>
             {% endblock%}
         </div>
 
