--- a/mediathreadinfo/static/css/mediathreadinfo.css
+++ b/mediathreadinfo/static/css/mediathreadinfo.css
@@ -57,3 +57,17 @@ body .nav > li > a.dropdown-toggle:hover {
     background-color: inherit;
     color: white;
 }
+
+.rolph-header {
+    padding: 75px 0;
+}
+
+.rolph-container {
+    color: white;
+    text-align: center;
+    background-image: url('../img/home-bg.png');
+    background-repeat: repeat-x;
+    background-position: center top;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
