--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav pull-right" style="margin-top: 10px;>
+            <ul class="nav navbar-nav pull-right" style="margin-top: 10px;">
                 <li><a href="/">Home</a></li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"
@@ -118,29 +118,18 @@
 {% endif %}
 {% endnevercache %}
 
-<h1>{% block title %}{% endblock %}</h1>
-
-<ul class="breadcrumb">
-{% spaceless %}
-{% block breadcrumb_menu %}{% page_menu "pages/menus/breadcrumb.html" %}{% endblock %}
-{% endspaceless %}
-</ul>
+<h1 style="margin-top: 60px;">{% block title %}{% endblock %}</h1>
 
 </div>
 
 <div class="container">
 <div class="row">
 
-<div class="col-md-2 left">
-    {% block left_panel %}
-    <div class="panel panel-default tree">{% page_menu "pages/menus/tree.html" %}</div>
-    {% endblock %}
-</div>
-
-<div class="col-md-7 middle">
+<div class="col-md-12 middle">
     {% block main %}{% endblock %}
 </div>
 
+<!--
 <div class="col-md-3 right">
     {% nevercache %}
     {% include "includes/language_selector.html" %}
@@ -155,7 +144,7 @@
     {% endblock %}
     </div>
     </div>
-</div>
+</div>-->
 
 </div>
 </div>
