--- a/templates/base.html
+++ b/templates/base.html
@@ -56,49 +56,13 @@
 
             {% block navbar_title %}
             <a href="/">
-                <img style="max-height: 70px;" src="{% static 'img/menu-logo.png' %}">
+                <img style="max-height: 50px;" src="{% static 'img/menu-logo.png' %}">
             </a>
             {% endblock%}
         </div>
 
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav pull-right" style="margin-top: 10px;">
-                <li><a href="/">Home</a></li>
-                <li>
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                       role="button" aria-haspopup="true" aria-expanded="false">
-                        About <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/about-mediathread/">About Mediathread</a></li>
-                        <li><a href="#">Watch the Video</a></li>
-                        <li><a href="/cases/">Cases</a></li>
-                        <li><a href="/research/">Research</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                       role="button" aria-haspopup="true" aria-expanded="false">
-                        Get Started
-                        <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Sign in @ Columbia</a></li>
-                        <li><a href="#">Request Access</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                       role="button" aria-haspopup="true" aria-expanded="false">
-                        Get Involved
-                        <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Collection Providers</a></li>
-                        <li><a href="#">Developers</a></li>
-                        <li><a href="#">Funders</a></li>
-                        <li><a href="#">Instructors</a></li>
-                    </ul>
-                </li>
-                <li><a href="/faq/">FAQ</a></li>
-            </ul>
+            {% block navbar_dropdown_menu %}{% page_menu "pages/menus/dropdown.html" %}{% endblock%}
         </div>
     </div>
 </nav>
@@ -130,6 +94,7 @@
 </div>
 
 <!--
+twitter
 <div class="col-md-3 right">
     {% nevercache %}
     {% include "includes/language_selector.html" %}
