--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
 <div class="panel-pane pane-node-title header-page">
     <div class="pane-content">
         <h2>
-            <a href="/content/faq" class="active">
+            <a href="." class="active">
                 {% block title %}{% endblock %}
             </a>
         </h2>
@@ -100,7 +100,6 @@
 <div class="col-md-12 middle">
     {% block main %}{% endblock %}
 </div>
-
 
 </div>
 </div>
